Add transfer contract definitions for realtime channel